--- a/loo-test_norm_negbin.Rmd
+++ b/loo-test_norm_negbin.Rmd
@@ -11,16 +11,15 @@ source('HILL_BiOp_functions.R')
 
 library(jagsUI)
 library(bayesplot)
-library(dplyr)
 library(loo)
 ```
 
 Create data:
 ```{r}
-Lnorm_Pois <- readRDS('RData/SSAR1_norm_negbin_var_theta_JM_1999_jagsUI_2018-10-01.rds')
+jm.out <- readRDS('RData/SSAR1_norm_negbin_var_theta_JM_1999_jagsUI_2018-10-01.rds')
 
-data.1 <- Lnorm_Pois$data.1
-means <- Lnorm_Pois$jm$mean
+data.1 <- jm.out$data.1
+means <- jm.out$jm$mean
 theta.1 <- means$theta.1
 theta.2 <- means$theta.2
 sigma.1 <- means$sigma.pro1
@@ -28,7 +27,7 @@ sigma.2 <- means$sigma.pro2
 mu <- means$mu
 r <- means$r
 
-m <- Lnorm_Pois$jags.data$m
+m <- jm.out$jags.data$m
 
 set.seed(123)
 X <- p <- y <- theta <- vector(mode = "numeric", length = length(m))
@@ -41,8 +40,8 @@ for (k in 2:length(m)){
   theta[k] <- ifelse(m[k] < 8, theta.1, theta.2)
   sigma <- ifelse(m[k] < 10 & m[k] > 4, sigma.1, sigma.2)
   X.mean <- theta[k] * X[k-1]
-  X[k] <- rnorm(1, mean = X.mean, sd = sigma)
-  
+  X[k] <- abs(rnorm(1, mean = X.mean, sd = sigma))
+  p[k] <- r/(r + X[k])
   y[k] <- rnbinom(1, size = r, prob = p[k])
 }
 
@@ -126,13 +125,13 @@ p.1 <- ggplot() +
   #geom_line(data = Xs.stats,
   #          aes(x = time, y = mode_X), color = 'blue') +
   geom_line(data = Xs.stats,
-            aes(x = time, y = exp(high_X)), color = "red",
+            aes(x = time, y = high_X), color = "red",
             linetype = 2) +
   geom_point(data = Xs.stats,
-             aes(x = time, y = exp(median_X)), color = "red",
+             aes(x = time, y = median_X), color = "red",
              alpha = 0.5) +
   geom_line(data = Xs.stats,
-            aes(x = time, y = exp(median_X)), color = "red",
+            aes(x = time, y = median_X), color = "red",
             alpha = 0.5) +
   geom_point(data = Xs.stats,
              aes(x = time, y = y), color = "green",
